--- a/configs/x96_mate_defconfig
+++ b/configs/x96_mate_defconfig
@@ -21,3 +21,10 @@ CONFIG_SYS_I2C_SPEED=400000
 CONFIG_SUPPORT_EMMC_BOOT=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_OHCI_HCD=y
+CONFIG_SPL_IMAGE_TYPE_SUNXI_TOC0=y
+CONFIG_AXP313_POWER=y
+CONFIG_AXP_DCDC1_VOLT=960
+CONFIG_AXP_DCDC2_VOLT=1120
+CONFIG_AXP_DCDC3_VOLT=1420
+CONFIG_AXP_ALDO1_VOLT=1800
+CONFIG_AXP_DLDO1_VOLT=3300
