--- a/arch/arm/dts/sun50i-h616-t95.dts
+++ b/arch/arm/dts/sun50i-h616-t95.dts
@@ -64,15 +64,12 @@
 };
 
 &mmc0 {
-	vmmc-supply = <&reg_dcdce>;
 	broken-cd;
 	bus-width = <4>;
 	status = "okay";
 };
 
 &mmc2 {
-	vmmc-supply = <&reg_dcdce>;
-	vqmmc-supply = <&reg_bldo1>;
 	bus-width = <8>;
 	non-removable;
 	cap-mmc-hw-reset;
@@ -89,117 +86,53 @@
 	status = "okay";
 };
 
-&r_rsb {
+&r_i2c {
 	status = "okay";
 
-	axp305: pmic@745 {
-		compatible = "x-powers,axp305", "x-powers,axp805",
-			     "x-powers,axp806";
+	axp313: pmic@36 {
+		compatible = "x-powers,axp313a";
 		interrupt-controller;
 		#interrupt-cells = <1>;
-		reg = <0x745>;
+		reg = <0x36>;
 
-		x-powers,self-working-mode;
-		vina-supply = <&reg_vcc5v>;
-		vinb-supply = <&reg_vcc5v>;
-		vinc-supply = <&reg_vcc5v>;
-		vind-supply = <&reg_vcc5v>;
-		vine-supply = <&reg_vcc5v>;
-		aldoin-supply = <&reg_vcc5v>;
-		bldoin-supply = <&reg_vcc5v>;
-		cldoin-supply = <&reg_vcc5v>;
+		vin1-supply = <&reg_vcc5v>;
+		vin2-supply = <&reg_vcc5v>;
+		vin3-supply = <&reg_vcc5v>;
 
 		regulators {
 			reg_aldo1: aldo1 {
-				regulator-always-on;
-				regulator-min-microvolt = <3300000>;
-				regulator-max-microvolt = <3300000>;
-				regulator-name = "vcc-sys";
-			};
-
-			/* Enabled by the Android BSP */
-			reg_aldo2: aldo2 {
-				regulator-min-microvolt = <3300000>;
-				regulator-max-microvolt = <3300000>;
-				regulator-name = "vcc3v3-ext";
-				status = "disabled";
-			};
-
-			/* Enabled by the Android BSP */
-			reg_aldo3: aldo3 {
-				regulator-min-microvolt = <3300000>;
-				regulator-max-microvolt = <3300000>;
-				regulator-name = "vcc3v3-ext2";
-				status = "disabled";
-			};
-
-			reg_bldo1: bldo1 {
 				regulator-always-on;
 				regulator-min-microvolt = <1800000>;
 				regulator-max-microvolt = <1800000>;
 				regulator-name = "vcc1v8";
 			};
 
-			/* Enabled by the Android BSP */
-			reg_bldo2: bldo2 {
-				regulator-min-microvolt = <1800000>;
-				regulator-max-microvolt = <1800000>;
-				regulator-name = "vcc1v8-2";
-				status = "disabled";
-			};
-
-			bldo3 {
-				/* unused */
-			};
-
-			bldo4 {
-				/* unused */
-			};
-
-			cldo1 {
-				regulator-min-microvolt = <2500000>;
-				regulator-max-microvolt = <2500000>;
-				regulator-name = "vcc2v5";
-			};
-
-			cldo2 {
-				/* unused */
-			};
-
-			cldo3 {
-				/* unused */
-			};
-
-			reg_dcdca: dcdca {
-				regulator-always-on;
-				regulator-min-microvolt = <810000>;
-				regulator-max-microvolt = <1100000>;
-				regulator-name = "vdd-cpu";
-			};
-
-			reg_dcdcc: dcdcc {
-				regulator-always-on;
-				regulator-min-microvolt = <810000>;
-				regulator-max-microvolt = <990000>;
-				regulator-name = "vdd-gpu-sys";
-			};
-
-			reg_dcdcd: dcdcd {
-				regulator-always-on;
-				regulator-min-microvolt = <1360000>;
-				regulator-max-microvolt = <1360000>;
-				regulator-name = "vdd-dram";
-			};
-
-			reg_dcdce: dcdce {
+			reg_dldo1: dldo1 {
 				regulator-always-on;
 				regulator-min-microvolt = <3300000>;
 				regulator-max-microvolt = <3300000>;
-				regulator-name = "vcc-eth-mmc";
+				regulator-name = "vcc3v3";
 			};
 
-			sw {
-				/* unused */
+			reg_dcdc1: dcdc1 {
+				regulator-always-on;
+				regulator-min-microvolt = <960000>;
+				regulator-max-microvolt = <960000>;
+				regulator-name = "vdd-gpu-sys";
+			};
+
+			reg_dcdc2: dcdc2 {
+				regulator-always-on;
+				regulator-min-microvolt = <1120000>;
+				regulator-max-microvolt = <1120000>;
+				regulator-name = "vdd-cpu";
+			};
+
+			reg_dcdc3: dcdc3 {
+				regulator-always-on;
+				regulator-min-microvolt = <1420000>;
+				regulator-max-microvolt = <1420000>;
+				regulator-name = "vdd-dram";
 			};
 		};
 	};
