--- a/arch/arm/dts/sun50i-h616-t95.dts
+++ b/arch/arm/dts/sun50i-h616-t95.dts
@@ -64,12 +64,15 @@
 };
 
 &mmc0 {
+	vmmc-supply = <&reg_dldo1>;
 	broken-cd;
 	bus-width = <4>;
 	status = "okay";
 };
 
 &mmc2 {
+	vmmc-supply = <&reg_dldo1>;
+	vqmmc-supply = <&reg_aldo1>;
 	bus-width = <8>;
 	non-removable;
 	cap-mmc-hw-reset;
