--- a/arch/arm/dts/sun50i-h616-t95.dts
+++ b/arch/arm/dts/sun50i-h616-t95.dts
@@ -64,20 +64,31 @@
 };
 
 &mmc0 {
-	vmmc-supply = <&reg_dldo1>;
 	broken-cd;
 	bus-width = <4>;
+	vmmc-supply = <&reg_dldo1>;
 	status = "okay";
 };
 
-&mmc2 {
-	vmmc-supply = <&reg_dldo1>;
-	vqmmc-supply = <&reg_aldo1>;
+&mmc1 {
 	bus-width = <8>;
 	non-removable;
 	cap-mmc-hw-reset;
 	mmc-ddr-1_8v;
 	mmc-hs200-1_8v;
+	vmmc-supply = <&reg_dldo1>;
+	vqmmc-supply = <&reg_aldo1>;
+	status = "okay";
+}
+
+&mmc2 {
+	bus-width = <8>;
+	non-removable;
+	cap-mmc-hw-reset;
+	mmc-ddr-1_8v;
+	mmc-hs200-1_8v;
+        vmmc-supply = <&reg_dldo1>;
+        vqmmc-supply = <&reg_aldo1>;
 	status = "okay";
 };
 
@@ -94,7 +105,7 @@
 
 	axp313: pmic@36 {
 		compatible = "x-powers,axp313a";
-		interrupt-controller;
+		#interrupt-controller;
 		#interrupt-cells = <1>;
 		reg = <0x36>;
 
@@ -119,15 +130,15 @@
 
 			reg_dcdc1: dcdc1 {
 				regulator-always-on;
-				regulator-min-microvolt = <960000>;
-				regulator-max-microvolt = <960000>;
+				regulator-min-microvolt = <810000>;
+				regulator-max-microvolt = <990000>;
 				regulator-name = "vdd-gpu-sys";
 			};
 
 			reg_dcdc2: dcdc2 {
 				regulator-always-on;
-				regulator-min-microvolt = <1120000>;
-				regulator-max-microvolt = <1120000>;
+				regulator-min-microvolt = <810000>;
+				regulator-max-microvolt = <1100000>;
 				regulator-name = "vdd-cpu";
 			};
 
@@ -140,6 +151,14 @@
 		};
 	};
 };
+
+&pio {
+	vcc-pc-supply = <&reg_dldo1>;
+	vcc-pf-supply = <&reg_dldo1>;
+	vcc-pg-supply = <&reg_aldo1>;
+	vcc-ph-supply = <&reg_dldo1>;
+	vcc-pi-supply = <&reg_dldo1>;
+}
 
 &uart0 {
 	pinctrl-names = "default";
